# g1_upperbody_ros2

./: .gitmodules  Dockerfile  build_and_run.sh  entrypoint.sh  entrypoint_deploy.sh  policy.onnx
g1_rl_deploy/: CMakeLists.txt  main.cpp
g1_upperbody/g1_upperbody/: crc.py  policy.py
g1_upperbody/launch/: g1_upperbody_direct.launch.xml
src/g1_bridge/: CMakeLists.txt  package.xml
src/g1_bridge/config/: gains.yaml
src/g1_bridge/g1_bridge/: crc.py
src/g1_bridge/launch/: g1_bridge.launch.xml
src/g1_bridge/rviz/: config.rviz
src/g1_bridge/scripts/: g1_bridge_node.py
src/g1_cbf/: CMakeLists.txt  package.xml
src/g1_cbf/config/: params.yaml
src/g1_cbf/g1_cbf/: cbf.py  cbf_config.py  collider_viz.py  jax_kinematics.py  kinematics.py  qp_solver.py
src/g1_cbf/launch/: bringup.launch.xml  bringup_manual.launch.xml  g1_cbf.launch.xml
src/g1_cbf/scripts/: g1_cbf_node.py  ghost_publisher_node.py
src/g1_human/: CMakeLists.txt  package.xml
src/g1_human/config/: human.yaml
src/g1_human/launch/: g1_human.launch.xml  g1_human_manual.launch.xml
src/g1_human/scripts/: g1_human_node.py
src/g1_rl_deploy/: CMakeLists.txt  package.xml
src/g1_rl_deploy/config/: config.yaml
src/g1_rl_deploy/include/g1_rl_deploy/: motor_crc_hg.h
src/g1_rl_deploy/launch/: g1_rl_deploy.launch.xml
src/g1_rl_deploy/models/: policy.onnx
src/g1_rl_deploy/scripts/: joint_command_gui.py  joint_merger.py  motion_playback.py  set_isaac_gains.txt
src/g1_rl_deploy/src/: g1_rl_deploy_node.cpp  motor_crc_hg.cpp
src/g1_upperbody/: CMakeLists.txt  package.xml
src/g1_upperbody/config/: params.yaml
src/g1_upperbody/g1_upperbody/: constants.py  observation.py
src/g1_upperbody/launch/: g1_upperbody.launch.xml
src/g1_upperbody/scripts/: g1_upperbody_direct_node.py  g1_upperbody_node.py
