<?xml version="1.0"?>
<package format="3">
  <name>g1_upperbody</name>
  <version>0.0.1</version>
  <description>RL policy node for G1 upper body + velocity control</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>unitree_hg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
